# software-defined-vehicle

./: .clang-format  .gitignore  Dockerfile  SDV-COMPLETE-GUIDE.md  SDV-README.md  docker-compose.yml
.github/workflows/: ci.yml
sdv-platform/: CMakeLists.txt  CMakePresets.json  Makefile
sdv-platform/apps/adas/: adaptive_cruise.hpp  aeb_function.hpp  blind_spot.hpp  lane_keeping.hpp
sdv-platform/apps/demo/: main.cpp  main_enhanced.cpp  main_v2.cpp
sdv-platform/apps/diagnostics/: dtc_store.hpp
sdv-platform/docs/: PROJECT_DOCUMENTATION.md
sdv-platform/drivers/can/: can_interface.cpp  can_interface.hpp
sdv-platform/middleware/ara_com/: service_registry.hpp
sdv-platform/middleware/ara_phm/: watchdog.hpp
sdv-platform/middleware/communication/: message_bus.hpp
sdv-platform/middleware/concepts/: sdv_concepts.hpp
sdv-platform/middleware/e2e/: e2e_protection.hpp
sdv-platform/middleware/logging/: sdv_log.hpp
sdv-platform/middleware/metrics/: metrics_collector.hpp
sdv-platform/middleware/spsc/: ring_buffer.hpp
sdv-platform/middleware/units/: physical_units.hpp
sdv-platform/security/crypto/: sha256.hpp
sdv-platform/services/diagnostics/: sovd_service.hpp
sdv-platform/services/dynamics/: vehicle_model.hpp
sdv-platform/services/ota/: ota_manager.cpp  ota_manager.hpp  ota_pipeline.hpp
sdv-platform/services/vehicle-health/: health_monitor.hpp
sdv-platform/services/vehicle-signals/: kalman_filter.hpp  vehicle_speed_service.hpp
sdv-platform/tests/: test_all.cpp
sdv-platform/tools/: generate_update_package.py
